Adicionando meta tags para o SEO

--- a/vtex/index.html
+++ b/vtex/index.html
@@ -1,9 +1,34 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vtex.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- SEO Tags -->
+    <meta
+      name="description"
+      content="Página desenvolvida para o Teste Econverse - Vaga Desenvolvedor Front-End Jr."
+    />
+    <meta
+      name="keywords"
+      content="econverse, teste, front-end, react, typescript"
+    />
+    <meta name="author" content="Gustavo Henrique de Jesus da Silva" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://appvtex.vercel.app/" />
+
+    <!-- Open Graph Tags -->
+    <meta property="og:title" content="VTex - Teste Econverse" />
+    <meta
+      property="og:description"
+      content="Página desenvolvida para o Teste Econverse - Vaga Desenvolvedor Front-End Jr."
+    />
+    <meta property="og:url" content="https://appvtex.vercel.app/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://appvtex.vercel.app/vtex.svg" />
+    <meta property="og:image:alt" content="https://appvtex.vercel.app/" />
+
     <title>VTex</title>
   </head>
   <body>
